# ai-visual-inspection-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: inference_demo.py
src/inspection/: __init__.py
src/inspection/config/: __init__.py  settings.py
src/inspection/models/: __init__.py  detector.py  segmenter.py  types.py
src/inspection/pipeline/: __init__.py  inspection_pipeline.py
src/inspection/preprocessing/: __init__.py  image_loader.py
src/inspection/visualization/: __init__.py  overlay.py
tests/: conftest.py
tests/integration/: test_inspection_pipeline.py
tests/unit/: test_detector.py  test_image_loader.py  test_segmenter.py  test_settings.py  test_types.py  test_visualizer.py
